# email-export-import

./: .gitignore  CHANGELOG.md  CLAUDE.md  NOTES.md  README.md  ROADMAP.md  eei_daemon.py  main.py  pyproject.toml
.claude/: settings.json
.claude/agents/: backend-parity-reviewer.md  flet-thread-safety-reviewer.md
.claude/skills/gui-smoke/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: build-gui.yml
docs/: ARCHITECTURE.md  gui-spool-and-subscribe.md
docs/superpowers/: daemon-architecture.md  gui-smoke-checklist.md  ui-redesign.md
docs/superpowers/plans/: 2026-07-09-email-migration-cli.md  2026-07-10-desktop-gui.md  2026-07-11-auto-update.md  2026-07-11-gui-multi-run.md  2026-07-12-bulk-migration.md
docs/superpowers/specs/: 2026-07-09-email-migration-cli-design.md  2026-07-10-desktop-gui-design.md  2026-07-11-auto-update-design.md  2026-07-11-gui-multi-run-design.md  2026-07-12-bulk-migration-design.md
email_export_import/: applog.py  cli.py  connection.py  errors.py  folders.py  models.py  providers.py  secrets_store.py  spool.py  state.py  throttle.py  transfer.py
email_export_import/daemon/: __main__.py  autostart.py  client.py  lifecycle.py  server.py  trayapp.py
email_export_import/gui/: app.py  async_ops.py  controller.py  daemon_backend.py  i18n.py  local_backend.py  prefs.py  run_manager.py  sysinfo.py  tray.py  updater.py  views.py
email_export_import/locales/: ar.json  de.json  en.json  es.json  fr.json  hi.json  pt.json  ru.json  tr.json  zh.json
packaging/: macos-entitlements.plist  windows-installer.iss
tests/: fakes.py  test_async_ops.py  test_autostart.py  test_bulk_view.py  test_cli.py  test_client.py  test_connection.py  test_daemon.py  test_daemon_backend.py  test_daemon_lifecycle.py  test_daemon_singleton.py  test_encoding.py  test_fakes.py  test_folders.py  test_gui_app.py  test_gui_controller.py  test_gui_e2e.py  test_i18n.py  test_integration.py  test_local_backend.py  test_main_view.py  test_models.py  test_prefs.py  test_providers.py  test_run_manager.py  test_secrets_store.py  test_spool.py  test_state.py  test_throttle.py  test_transfer.py  test_tray.py  test_trayapp.py  test_updater.py  test_version.py
