[project]
name = "email-export-import"
version = "0.1.0"
description = "Interactive CLI to migrate a mailbox between IMAP servers"
requires-python = ">=3.11"
dependencies = [
    "imapclient>=3.0",
    "typer>=0.12",
    "rich>=13.7",
]

[project.scripts]
email-export-import = "email_export_import.cli:app"
email-export-import-gui = "email_export_import.gui.app:main"

[project.optional-dependencies]
gui = ["flet>=0.25,<1.0"]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["email_export_import"]
