[project]
name = "email-export-import"
version = "0.1.30"
description = "Interactive CLI to migrate a mailbox between IMAP servers"
requires-python = ">=3.11"
dependencies = [
    "imapclient>=3.0",
    "typer>=0.12",
    "rich>=13.7",
    # The flet-build bootstrap does `import certifi` before starting the app,
    # but nothing else pulls it in — without this line the packaged desktop
    # app dies at startup with ModuleNotFoundError: certifi.
    "certifi",
    # flet build bundles ONLY [project].dependencies into the app — an
    # optional extra is invisible to it, and the packaged app then dies with
    # ModuleNotFoundError: flet. Keep the version pinned in lockstep with the
    # gui extra below.
    "flet>=0.85,<0.86",
    # System-tray / menu-bar icon for the daemon (persists while the GUI is
    # closed). pystray backs macOS menu bar, Windows system tray and Linux app
    # indicators; it pulls Pillow, and the pyobjc frameworks on darwin.
    "pystray>=0.19",
    "pillow>=10",
    # Password storage: macOS uses the built-in `security` CLI (no dep). Only
    # Windows/Linux need keyring, and flet doesn't bundle its jaraco.* deps
    # into the mac app anyway — so scope it off darwin.
    "keyring>=25.7.0 ; sys_platform != 'darwin'",
]

[project.scripts]
email-export-import = "email_export_import.cli:app"
email-export-import-gui = "email_export_import.gui.app:main"

[project.optional-dependencies]
gui = ["flet>=0.85,<0.86"]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["email_export_import"]

# Desktop packaging (`flet build`). The app entry is the root main.py.
[tool.flet]
product = "Email Export Import Tool"
org = "com.ckurultaykalkan"

[tool.flet.app]
module = "main"
